--- a/project/index.html
+++ b/project/index.html
@@ -69,18 +69,6 @@
     </div>
   </section>
   
-
-  <!-- Method Video -->
-  <section class="section">
-    <div class="container is-max-desktop">
-      <h2 class="title is-3">Method</h2>
-      <video controls autoplay muted loop style="width: 100%; border-radius: 8px;">
-        <source src="videos/nao_method.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-  </section>
-
   <section class="section">
     <div class="container is-max-desktop">
         <!-- Abstract. -->
@@ -95,6 +83,16 @@
         </div>
     </div>
 </section>
+         <!-- Method Video -->
+  <section class="section">
+    <div class="container is-max-desktop">
+      <h2 class="title is-3">Method</h2>
+      <video controls autoplay muted loop style="width: 100%; border-radius: 8px;">
+        <source src="videos/nao_methhod.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  </section>
 </body>
 
 </html>
